[gd_scene load_steps=3 format=3 uid="uid://dhw70ch7jwpgi"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_rmq53"]

[sub_resource type="Theme" id="Theme_mob5e"]

[node name="MainMenu" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_rmq53")

[node name="Background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.43134, 0.43134, 0.43134, 1)

[node name="Title" type="Label" parent="."]
offset_top = 32.0
offset_right = 160.0
offset_bottom = 46.0
scale = Vector2(2, 2)
text = "Color Climb"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
offset_left = 40.0
offset_top = 69.0
offset_right = 280.0
offset_bottom = 180.0
alignment = 1

[node name="ContinueGame" type="Button" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
text = "Continue Game"

[node name="NewGame" type="Button" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_mob5e")
text = "New Game"

[node name="JoinGame" type="Button" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
text = "Join Game"

[connection signal="pressed" from="Buttons/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Buttons/JoinGame" to="." method="_on_join_game_pressed"]
